[gd_scene load_steps=27 format=3 uid="uid://dla7322gqg01h"]

[ext_resource type="Texture2D" uid="uid://dxo4nnx3xrdkh" path="res://assets/UI/title.png" id="1_61u86"]
[ext_resource type="Script" uid="uid://cy70c8x8yfiwe" path="res://scripts/title_screen.gd" id="1_dc4i4"]
[ext_resource type="Texture2D" uid="uid://ygmlt2wyfs2k" path="res://assets/UI/menu_background.png" id="1_mgrm8"]
[ext_resource type="Texture2D" uid="uid://ckpx50ngtnrok" path="res://assets/UI/table_menu.png" id="2_dc4i4"]
[ext_resource type="Texture2D" uid="uid://dvynrwpbh51dy" path="res://assets/UI/menu_backgroundt.png" id="3_cs5ya"]
[ext_resource type="Texture2D" uid="uid://c71ubbhal4f36" path="res://assets/UI/allarm_clock.png" id="4_e54dn"]
[ext_resource type="Texture2D" uid="uid://b17ern8mqlwwl" path="res://assets/UI/allarm_clock-Sheett.png" id="6_e54dn"]
[ext_resource type="Texture2D" uid="uid://b40q71yxk6lrg" path="res://assets/particles_and_easter_eggs/Z.png" id="7_3yumr"]

[sub_resource type="Animation" id="Animation_3yumr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0349066]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Background:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 260, 145)]
}

[sub_resource type="Animation" id="Animation_e54dn"]
resource_name = "title"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0349066, -0.0349066, 0.0349066]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Background:region_rect")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Rect2(0, 0, 260, 145), Rect2(260, 0, 260, 145), Rect2(0, 0, 260, 145)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cs5ya"]
_data = {
&"RESET": SubResource("Animation_3yumr"),
&"title": SubResource("Animation_e54dn")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_3yumr"]
atlas = ExtResource("6_e54dn")
region = Rect2(780, 0, 260, 145)

[sub_resource type="AtlasTexture" id="AtlasTexture_e54dn"]
atlas = ExtResource("6_e54dn")
region = Rect2(260, 0, 260, 145)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs5ya"]
atlas = ExtResource("6_e54dn")
region = Rect2(0, 0, 260, 145)

[sub_resource type="AtlasTexture" id="AtlasTexture_mykxm"]
atlas = ExtResource("6_e54dn")
region = Rect2(260, 0, 260, 145)

[sub_resource type="AtlasTexture" id="AtlasTexture_tklts"]
atlas = ExtResource("6_e54dn")
region = Rect2(1560, 0, 260, 145)

[sub_resource type="AtlasTexture" id="AtlasTexture_u26n3"]
atlas = ExtResource("6_e54dn")
region = Rect2(1300, 0, 260, 145)

[sub_resource type="AtlasTexture" id="AtlasTexture_ib7db"]
atlas = ExtResource("6_e54dn")
region = Rect2(520, 0, 260, 145)

[sub_resource type="AtlasTexture" id="AtlasTexture_mynnq"]
atlas = ExtResource("6_e54dn")
region = Rect2(520, 0, 260, 145)

[sub_resource type="AtlasTexture" id="AtlasTexture_frs5l"]
atlas = ExtResource("6_e54dn")
region = Rect2(1040, 0, 260, 145)

[sub_resource type="SpriteFrames" id="SpriteFrames_mynnq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yumr")
}],
"loop": true,
"name": &"exit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e54dn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e54dn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mykxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tklts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u26n3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ib7db")
}],
"loop": false,
"name": &"intro",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mynnq")
}],
"loop": true,
"name": &"normal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_frs5l")
}],
"loop": true,
"name": &"play",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e8tpv"]
size = Vector2(54, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4qe4i"]
size = Vector2(12, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mykxm"]
size = Vector2(90, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tklts"]
size = Vector2(40, 40)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_cs5ya"]
particle_flag_disable_z = true
gravity = Vector3(0, -98, 0)
scale_min = 0.3
hue_variation_min = -2.23517e-08
hue_variation_max = 0.1
anim_speed_max = 16.0
turbulence_enabled = true

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_dc4i4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Title")
libraries = {
&"": SubResource("AnimationLibrary_cs5ya")
}
autoplay = "title"

[node name="LeaveItThere" type="Sprite2D" parent="."]
scale = Vector2(6, 6)
texture = ExtResource("1_mgrm8")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(-2, 3)
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_cs5ya")
region_enabled = true
region_rect = Rect2(0, 0, 260, 145)

[node name="Table" type="Sprite2D" parent="."]
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_dc4i4")

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(-31, -40)
rotation = 0.0349066
scale = Vector2(1.2, 1.2)
texture = ExtResource("1_61u86")

[node name="Alarm" type="Sprite2D" parent="."]
position = Vector2(9, -3)
scale = Vector2(1.2, 1.2)
texture = ExtResource("4_e54dn")

[node name="Buttons" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mynnq")
animation = &"intro"

[node name="PlayButton" type="Area2D" parent="Buttons"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buttons/PlayButton"]
position = Vector2(-100, 39)
shape = SubResource("RectangleShape2D_e8tpv")

[node name="ExitButton" type="Area2D" parent="Buttons"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buttons/ExitButton"]
position = Vector2(-53, 35.5)
shape = SubResource("RectangleShape2D_4qe4i")

[node name="PlayScreenButton" type="TouchScreenButton" parent="Buttons"]
visible = false
position = Vector2(-112, 38)
shape = SubResource("RectangleShape2D_mykxm")

[node name="ExitScreenButton" type="TouchScreenButton" parent="Buttons"]
visible = false
position = Vector2(-41, 34)
shape = SubResource("RectangleShape2D_tklts")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(97, -29)
scale = Vector2(1.2, 1.2)
amount = 4
amount_ratio = 0.5
sub_emitter = NodePath(".")
texture = ExtResource("7_3yumr")
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_cs5ya")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="AudioListener2D" type="AudioListener2D" parent="Camera2D"]
current = true

[node name="Timer" type="Timer" parent="."]
wait_time = 4.5
one_shot = true
autostart = true

[connection signal="mouse_entered" from="Buttons/PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/PlayButton" to="." method="_on_play_button_mouse_exited"]
[connection signal="mouse_entered" from="Buttons/ExitButton" to="." method="_on_exit_button_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/ExitButton" to="." method="_on_exit_button_mouse_exited"]
[connection signal="pressed" from="Buttons/PlayScreenButton" to="." method="_on_play_screen_button_pressed"]
[connection signal="pressed" from="Buttons/ExitScreenButton" to="." method="_on_exit_screen_button_pressed"]
